[package]
name = "payjoin-poc"
version = "0.1.0"
edition = "2021"

[dependencies]
bitcoincore-rpc = { version = "0.19.0", default-features = false }
bdk_wallet = { version = "1.0.0" }

payjoin = { version = "0.22.0", features = ["send", "receive", "v2", "io"] }
tokio = { version = "1.36.0", features = ["full"] }
url = "2.5.4"
reqwest = { version = "0.12", default-features = false }

ldk-node = { git = "https://github.com/arturgontijo/ldk-node.git", branch = "payjoin-poc" }
